--- a/src/langgraphagenticai/UI/uiconfigfile.ini
+++ b/src/langgraphagenticai/UI/uiconfigfile.ini
@@ -1,7 +1,7 @@
 [DEFAULT]
-PAGE_TITLE = LangGraph: Build Agentic AI LangGraph
+PAGE_TITLE = LangGraph: Build Stateful Agentic AI Graph
 LLM_OPTIONS =  Groq
-USECASE_OPTIONS = Basic Chatbot, Chatbot with Web
+USECASE_OPTIONS = Basic Chatbot, Chatbot with Web, AI News
 GROQ_MODEL_OPTIONS = llama-3.3-70b-versatile, llama-3.1-8b-instant
 
 
